# gradsync

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  architecture.html  index.html
.github/workflows/: ci.yml
bindings/: Cargo.toml  pyproject.toml
bindings/src/: lib.rs
core/: Cargo.toml  build.rs
core/src/: collectives.rs  comm.rs  error.rs  lib.rs  nccl.rs  topology.rs
docs/: architecture.html  architecture.md  overlap-animation.html
examples/: allreduce_test.py  train_mnist.py
infra/terraform/: example.tfvars  main.tf  outputs.tf  startup.sh.tpl  variables.tf
python/gradsync/: __init__.py  launch.py  trainer.py
python/tests/: __init__.py  test_bucketing.py
